--- a/style.css
+++ b/style.css
@@ -8,34 +8,37 @@ body {
     );
     margin: 0;
     min-height: 100vh;
-    width: 100%
+    width: 100%;
 }
 
 main{
-align-items: center;
-display: flex;
-height: 100vh;
-justify-content: center;
-position: relative
-}
-
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    position: relative
+    }
+    
 
 main > section button {
-   background-color: azure;
-   border:black;
-   border-radius: 4px;
-   color: black;
-   font-family: EuclidBold;
-   font-size: 15px;
-   font-weight: 700;
-   letter-spacing: -0.5px;
-   line-height: 20px;
-   padding: 9px 23px;
-   text-transform: uppercase
+    background-color: rgb(133, 150, 150);
+    border:black;
+    border-radius: 4px;
+    color: black;
+    font-family: EuclidBold;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    line-height: 20px;
+    padding: 9px 23px;
+    text-transform: uppercase;
 }
 
 #detalhes-container > li {
     align-items: baseline;
-    display: flex
+    display: flex;
+    
 }
+
+
 
